update css and js compile pipeline remove gulp add popover component and minimal implemented on autocomplate

--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -45,8 +45,12 @@
             <EntCard>
                 <CardBody>
                     <EntButton Click="OpenPopover">باز کردن</EntButton>
-                    <EntPopover Open="IsPopoverOpen">
-                        <p>ssss</p>
+                    <EntPopover Open="IsPopoverOpen" RelativeWidth="true">
+                        <EntCard>
+                            <CardBody>
+                                <p>ssss</p>
+                            </CardBody>
+                        </EntCard>
                     </EntPopover>
                 </CardBody>
             </EntCard>
