--- a/Enter.UI/Styles/components/_components.scss
+++ b/Enter.UI/Styles/components/_components.scss
@@ -7,3 +7,4 @@
 @import "ent_nav_menu.component";
 @import "ent_layout.component";
 @import "ent_table.component";
+@import "ent_popover.component";
