--- a/Enter.UI/Components/Inputs/EntAutoCompleteInput.razor
+++ b/Enter.UI/Components/Inputs/EntAutoCompleteInput.razor
@@ -3,22 +3,19 @@
 @using Enter.UI.Core.Enums
 @inherits Microsoft.AspNetCore.Components.Forms.InputBase<string?>
 
-<div class="@RootClass">
+<div class="@RootClass"> 
     <InputText class="@(RootClass + "-input")" @attributes="@AdditionalAttributes"
-               @onfocusin="OnInputFocusInCallback"
-               @onfocusout="OnInputFocusOutCallback"
-               disabled
-               bind-Value="@Value" Value="@Value" DisplayName="@DisplayName" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression"/>
+               @onclick="OnInputFocusInCallback"
+               @bind-Value="@Value" />
     <EntPopover Open="_showMenu" RelativeWidth="true" Anchor="Origin.BottomCenter" Transform="Origin.TopCenter" PopoverClass="@(RootClass + "-popover")">
         <EntCard>
             <CardBody >
                 <div class="d-flex flex-column gap-4">
-                    <input placeholder="جستجو ..."/>
+                    <input class="ent-input" value="@SearchValue" @onchange="OnSearchChange" placeholder="جستجو ..."/>
                     <EntNavMenu class="@(RootClass + "-menu")">
                         <EntNavMenuTextItem Text="S" Click="() => { }"/>
                     </EntNavMenu>
-                </div>
-
+                </div> 
             </CardBody>
         </EntCard>
     </EntPopover>
@@ -55,6 +52,11 @@
     {
         _showMenu = false;
         StateHasChanged();
+    }
+
+    private async Task OnSearchChange(ChangeEventArgs arg)
+    {
+        Console.WriteLine(arg.Value);
     }
 
 }
