--- a/Enter.UI/Components/Popover/EntPopover.razor
+++ b/Enter.UI/Components/Popover/EntPopover.razor
@@ -20,6 +20,7 @@
         .AddClass("ent-popover-content")
         .AddClass($"ent-popover-anchor-{Anchor.GetCssClass()}")
         .AddClass($"ent-popover-{Transform.GetCssClass()}")
+        .AddClass("ent-popover-overflow-flip-onopen")
         .AddClass("ent-popover-open", Open)
         .AddClass("ent-popover-relative-width", RelativeWidth)
         .Build();
