--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -42,7 +42,7 @@
                     </div>
                 </CardBody>
             </EntCard>
-            <EntCard>
+            <EntCard class="mb-4">
                 <CardBody>
                     <EntButton Click="OpenPopover">باز کردن</EntButton>
                     <EntPopover Open="IsPopoverOpen" RelativeWidth="true">
