--- a/Enter.UI/Components/Popover/EntPopoverProvider.razor
+++ b/Enter.UI/Components/Popover/EntPopoverProvider.razor
@@ -44,7 +44,7 @@
 
     private async Task OnPopoverContainerClick(MouseEventArgs arg)
     {
-        await EntPopoverService.CloseAllAsync();
+        // await EntPopoverService.CloseAllAsync();
     }
 
 }
