--- a/Enter.Dashboard/Shared/MainLayout.razor
+++ b/Enter.Dashboard/Shared/MainLayout.razor
@@ -3,24 +3,23 @@
 @using Enter.UI.Services.Contracts;
 @using Enter.Dashboard.Components
 @inherits LayoutComponentBase
-<div dir="@Direction" class="border-y d-flex flex-column h-full">
+<div dir="@Direction" class="@($"ent-{Direction}") border-y d-flex flex-column h-full">
     <EntLayout @ref="Layout"
-        SidebarIsShow="_sidebarIsShow"
-        SidebarClass="bg-white" 
-        ContentClass="bg-light"
-        OnSidebarIsShowChanged="OnSidebarIsShowChanged"
-        >
+               SidebarIsShow="_sidebarIsShow"
+               SidebarClass="bg-white"
+               ContentClass="bg-light"
+               OnSidebarIsShowChanged="OnSidebarIsShowChanged">
         <AppBar>
-                <div class="d-flex items-center  px-8 py-4">
-                    <div class="flex-grow-1 d-flex  item-center gap-4">
-                        <EntIcon Click="ToggleSidebar" class="cursor-pointer" Type="EntIconType.IconTag" Data="fa-light fa-bars"/>
-                        <b>پلتفرم مدیریتی انترپرایس</b>
-                    </div>
-                    <div class="d-flex gap-2">
-                        <EntButton Click="ToRtl" Icon="fa-light fa-align-right" Size="ButtonSize.Small">راست چین</EntButton>
-                        <EntButton Click="ToLtr" Icon="fa-light fa-align-left" Size="ButtonSize.Small">چپ چین</EntButton>
-                    </div>
+            <div class="d-flex items-center  px-8 py-4">
+                <div class="flex-grow-1 d-flex  item-center gap-4">
+                    <EntIcon Click="ToggleSidebar" class="cursor-pointer" Type="EntIconType.IconTag" Data="fa-light fa-bars"/>
+                    <b>پلتفرم مدیریتی انترپرایس</b>
                 </div>
+                <div class="d-flex gap-2">
+                    <EntButton Click="ToRtl" Icon="fa-light fa-align-right" Size="ButtonSize.Small">راست چین</EntButton>
+                    <EntButton Click="ToLtr" Icon="fa-light fa-align-left" Size="ButtonSize.Small">چپ چین</EntButton>
+                </div>
+            </div>
         </AppBar>
         <Sidebar>
             <EntTab ItemDirection="EntTabItemDirection.Vertical"
@@ -32,7 +31,7 @@
                     class="border-0 h-full">
 
                 <EntTabPanel Title="صفحه اصلی" Icon="fa-light fa-home" class="w-60">
-                    <EntNavMenu  class="border-0">
+                    <EntNavMenu class="border-0">
                         <EntNavMenuGroup Title="تعاریف" Icon="fa-light fa-home">
                             <EntNavMenuTextItem class="bg-light" IconData="fa-light fa-clock" Text="شمارنده" Click="() => AddNewTab<Counter>()"/>
                             <EntNavMenuTextItem class="bg-light" IconData="fa-light fa-arrow-down" Text="دریافت اطلاعات" Click="() => AddNewTab<FetchData>()"/>
@@ -40,9 +39,9 @@
                         <EntNavMenuGroup Title="صفحات فرم" Icon="fa-light fa-note" IconType="EntIconType.IconTag">
                             <EntNavMenuTextItem class="bg-light" Text="فرم معمولی" Click="() => AddNewTab<FormLayout>()"/>
                         </EntNavMenuGroup>
-                         <EntNavMenuGroup Title="جداول" Icon="fa-light fa-note" IconType="EntIconType.IconTag">
-                                                    <EntNavMenuTextItem class="bg-light" Text="جدول داده" Click="() => AddNewTab<Table>()"/>
-                                                </EntNavMenuGroup>
+                        <EntNavMenuGroup Title="جداول" Icon="fa-light fa-note" IconType="EntIconType.IconTag">
+                            <EntNavMenuTextItem class="bg-light" Text="جدول داده" Click="() => AddNewTab<Table>()"/>
+                        </EntNavMenuGroup>
                     </EntNavMenu>
                 </EntTabPanel>
 
@@ -65,9 +64,8 @@
 @code {
 
 
+    public EntLayout Layout { get; set; }
 
-    public EntLayout Layout { get; set; }    
-    
     [Inject]
     public IEntMdiService EntMdiService { get; set; }
 
@@ -86,7 +84,8 @@
         else if (typeof(T) == typeof(FormLayout))
         {
             EntMdiService.AddNewTab<FormLayout>("FormLayout", "فرم معمولی", "fa-light fa-note");
-        }else if (typeof(T) == typeof(Table))
+        }
+        else if (typeof(T) == typeof(Table))
         {
             EntMdiService.AddNewTab<Table>("Table", "جدول داده", "fa-light fa-table");
         }
