--- a/Enter.UI/Styles/EnterUi.scss
+++ b/Enter.UI/Styles/EnterUi.scss
@@ -10,7 +10,7 @@ body {
 }
 
 * {
-  box-sizing: border-box ;
+  box-sizing: border-box;
   border-collapse: collapse;
 }
 
@@ -21,7 +21,7 @@ body {
 
 p {
   margin-bottom: map-get($font-sizes, "medium");
-} 
+}
 
 h1, h2, h3, h4, h5 {
   margin: 3rem 0 1.38rem;
@@ -51,8 +51,7 @@ h5 {
   font-size: map-get($font-sizes, "medium")
 }
 
-h6
-{
+h6 {
   font-size: map-get($font-sizes, "medium-sm")
 }
 
@@ -63,6 +62,24 @@ small, .text_small {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.ent-rtl {
+
+  * {
+    text-align: right !important;
+  }
+  
+  direction: rtl !important;
+}
+
+.ent-ltr {
+
+  direction: ltr !important;
+
+  * {
+    text-align: left !important;
+  }
 }
 
 
