--- a/Enter.UI/Components/Table/EntTable.razor
+++ b/Enter.UI/Components/Table/EntTable.razor
@@ -26,7 +26,7 @@
             @if (showNextPaginate)
             {
                 <li @onclick="NextPage" class="ent-table-pagination-item">
-                    <EntIcon Data="fa-light fa-chevron-right"/>
+                    <EntIcon Icon="fa-light fa-chevron-right"/>
                 </li>
             }
             
@@ -39,7 +39,7 @@
             @if (showLastPaginate)
            {
                <li @onclick="LastPage" class="ent-table-pagination-item">
-                  <EntIcon Data="fa-light fa-chevron-left"/>
+                  <EntIcon Icon="fa-light fa-chevron-left"/>
                </li>
            }
         </ul>
