--- a/Enter.UI/Components/Modal/EntModal.razor
+++ b/Enter.UI/Components/Modal/EntModal.razor
@@ -4,7 +4,7 @@
                 <div class="@RootCss" @onclick:stopPropagation="true" @onclick="OnModalClick">
                     <div class="ent-modal-header">
                         <b class="title">@Title</b>
-                        <EntIcon class="icon" Click="OnCancelClick" Type="EntIconType.IconTag" Icon="fa-light fa-close"/>
+                        <EntIcon class="icon" Click="OnCancelClick"  Icon="fa-light fa-close"/>
                     </div>
                     <div class="ent-modal-content">
                         @ChildContent
